Revert "Fix top controls spacing issue when widgetizing reports"
This reverts commit d040bc83742b95825f7c77e6bb721823faaea264.

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -667,10 +667,6 @@ td.cellSubDataTable .loadingPiwik {
   .dataTable.isDataTableEmpty:not(.hasSearchKeyword) & {
     display: none;
   }
-
-  .dataTable.dataTableVizHtmlTable .dataTableWrapper & {
-    margin-top: 0;
-  }
 }
 
 .theWidgetContent .card .card-content, table.dataTable {
